--- a/assets/index.css
+++ b/assets/index.css
@@ -1,135 +1,146 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .main-section {
-    max-width: 992px;
-    border: 2px solid #000;
-    margin: 0 20px;
-    padding: 0 20px;
-    width: 100%;
-  }
-  
-  .header-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 30px;
-  }
-  
-  .nav-order {
-    display: flex;
-    justify-content: flex-end;
-    list-style: none;
-  }
-  
-  .nav-list-add {
-    border-right: #000 2px solid;
-    border-left: #000 2px solid;
-  }
-  
-  .nav-link {
-    padding: 8px;
-    text-decoration: none;
-    color: #000;
-    margin: 2px;
-    display: block;
-  }
-  
-  .section-book-date {
-    text-align: end;
-    margin-bottom: 30px;
-    padding-right: 20px;
-  }
-  
-  .section-book-list {
-    border: 2px solid #000;
-    padding: 10px;
-    margin: 10px;
-  }
-  
-  .book-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px;
-  }
-  
-  .book-list:nth-child(odd) {
-    background-color: #f0f0f0;
-  }
-  
-  .button-remove {
-    padding: 5px;
-  }
-  
-  .section-books-add {
-    padding: 10px;
-    text-align: end;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .book-add-head {
-    margin-bottom: 20px;
-  }
-  
-  .form-book-add {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-  }
-  
-  .book-add-input {
-    padding: 8px;
-    display: block;
-    margin: 5px;
-  }
-  
-  .book-add-input .btn-add {
-    padding: 5px 20px;
-  }
-  
-  .section-book-contact {
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .p-contact {
-    padding: 10px;
-    line-height: 20px;
-  }
-  
-  .list-contact {
-    padding: 10px;
-    line-height: 10px;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 15px;
-  }
-  
-  .d-none {
-    display: none;
-  }
-  
-  ul li .active {
-    color: blue;
-    font-weight: bold;
-  }
-  
-  .copyright {
-    padding: 10px;
-  }
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% - 1.5rem);
+  margin: 0.5rem auto;
+  padding: 0.3rem;
+  border: 1px solid #777;
+}
+
+nav .logo {
+  text-transform: capitalize;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+nav .links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: 0;
+  padding-left: 0;
+  list-style: none;
+  margin-right: 1rem;
+  gap: 0;
+}
+
+.links a {
+  border-left: 2px solid #444;
+  text-transform: capitalize;
+  color: #222;
+  font-weight: 500;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+}
+
+.links a.active,
+.links a:hover,
+.links a:active {
+  color: #244cfc;
+}
+
+.links li:first-child a {
+  border-left: none;
+}
+
+main {
+  width: 100%;
+  max-width: 768px;
+  margin: 6rem auto;
+  min-height: 50vh;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 200px;
+  gap: 0.5rem;
+  margin: auto;
+}
+
+h1,
+h2 {
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.book {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.25rem;
+  padding: 0.25rem;
+}
+
+.book:nth-child(2n + 1) {
+  background-color: #999;
+}
+
+#books {
+  border: 2px solid #999;
+  padding: 0.25rem;
+  margin-bottom: 2rem;
+}
+
+.book small,
+.book button {
+  display: block;
+}
+
+.remove {
+  cursor: pointer;
+  box-shadow: 0.15rem 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
+  transition: all 0.15s ease-in;
+  margin-left: auto;
+}
+
+.remove:hover {
+  transform: translateY(-1px);
+}
+
+#contact {
+  text-align: center;
+}
+
+#contact ul {
+  padding-left: 0;
+  width: 100%;
+  max-width: 320px;
+  margin: auto auto auto 0;
+  text-align: left;
+}
+
+h3 {
+  text-transform: capitalize;
+  margin: 0.25rem;
+}
+
+footer {
+  margin-top: auto;
+}
+
+footer nav {
+  width: calc(100% - 1.5rem);
+  margin: auto;
+  padding: 0.3rem;
+  border: 1px solid #777;
+}
+
+.hide {
+  display: none;
+}
+
+#time {
+  text-align: end;
+  padding: 0 2rem;
+}
